--- a/Templates/Designs/TTonlineNew/Custom/Sidebar/New-Widget-Eveniment.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/Sidebar/New-Widget-Eveniment.cshtml
@@ -8,7 +8,7 @@
 </h3>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-	<div class="carousel-inner handlebars-wrapper" role="listbox" data-template="CaruselEvenimenteTemplate"  data-json-feed="/Default.aspx?ID=@GetPageIdByNavigationTag("EventsFeed")">
+	<div class="carousel-inner handlebars-wrapper" role="listbox" data-template="CaruselEvenimenteTemplate"  data-json-feed="/Default.aspx?ID=@GetPageIdByNavigationTag("EventsFeed")&redirect=false">
 		@*Handlebars goes here*@
 	</div>
 	
