--- a/Templates/Designs/TTonlineNew/Custom/Sidebar/New_Widget-Evenimente.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/Sidebar/New_Widget-Evenimente.cshtml
@@ -7,7 +7,7 @@
 	</h3>
 
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-		<div class="carousel-inner sidebar-handlebars-wrapper" role="listbox" data-template="WidgetEvenimenteTemplate"  data-json-feed="/Default.aspx?ID=@eventsPageID">
+		<div class="carousel-inner sidebar-handlebars-wrapper" role="listbox" data-template="WidgetEvenimenteTemplate"  data-json-feed="/Default.aspx?ID=@eventsPageID&redirect=false">
 			@*Handlebars goes here*@
 			@RenderPlaceholderImageTop("pre-render-element--md")
 		</div>
