--- a/Templates/Designs/TTonlineNew/New_ArticoleContent.cshtml
+++ b/Templates/Designs/TTonlineNew/New_ArticoleContent.cshtml
@@ -46,7 +46,7 @@
     var url = finalUrl;
     if (!string.IsNullOrEmpty(sectionID))
     {
-        url += "&Sections=" + sectionID;
+        url += "&Sections=" + sectionID + "&redirect=false";
     }
 }
       <div class="row blog-content">
