--- a/Templates/Designs/TTonlineNew/New_StiriContent.cshtml
+++ b/Templates/Designs/TTonlineNew/New_StiriContent.cshtml
@@ -43,7 +43,7 @@
     var url = finalUrl;
     if (!string.IsNullOrEmpty(sectionID))
     {
-        url += "&Sections="+ sectionID;
+        url += "&Sections="+ sectionID + "&redirect=false";
     }
 }
 	
