--- a/Templates/Designs/TTonlineNew/Paragraph/New_ArticleListRecomandari.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_ArticleListRecomandari.cshtml
@@ -21,7 +21,7 @@
 	<h3 class="block-title">
 		<span>@Translate("recomandari","Recomandari") T&T</span>
 	</h3>
-    <div id="RecomandariTT" data-template="RecomandariTTTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesIDs">
+    <div id="RecomandariTT" data-template="RecomandariTTTemplate" data-json-feed="/Default.aspx?ID=@pageId&redirect=false&PageID=@articlesIDs">
          <div class="row">
              @RenderPlaceholderImageTop("pre-render-element--lg")
              @RenderPlaceholderImageOnLeft()
