--- a/Templates/Designs/TTonlineNew/Paragraph/New_ArticleSlider.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_ArticleSlider.cshtml
@@ -26,15 +26,15 @@
 
 <div class="row">
   <div class="col-md-12">
-    <div class="flexslider">
-      <div class="featured-slider" id="HomePageSlider" data-template="HomepageSliderTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesSlides&pagesize=9">
+    <div class="">
+      <div class="featured-slider" id="HomePageSlider" data-template="HomepageSliderTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesSlides&pagesize=9&redirect=false">
         <div class="row">
           <div class="col-md-9">
             <div class="pre-render-element pre-render-element--xl"></div>
           </div>
           <div class="col-md-3">
-            <div class="pre-render-element pre-render-element--lg"></div>
-            <div class="pre-render-element pre-render-element--lg"></div>
+            <div class="pre-render-element pre-render-element--md-slider"></div>
+            <div class="pre-render-element pre-render-element--md-slider"></div>
           </div>
         </div>
       </div>
