--- a/Templates/Designs/TTonlineNew/Paragraph/New_CarouselCompanii-4.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_CarouselCompanii-4.cshtml
@@ -19,7 +19,7 @@
     </h3>
     <h4><span class="tipcompanie-homepage-tag tipcompanie4">@GetString("Item.Titlu")</span></h4>
     <div class="carousel-companii caruselMarginBottom">
-        <div class="owl-carousel owl-companii-1 owl-theme handlebars-wrapper" data-template="CarouselCompanii1Template" data-slides-number="4" data-json-feed="/Default.aspx?ID=@pageId&CompanieID=@companiesIDs">
+        <div class="owl-carousel owl-companii-1 owl-theme handlebars-wrapper" data-template="CarouselCompanii1Template" data-slides-number="4" data-json-feed="/Default.aspx?ID=@pageId&redirect=false&CompanieID=@companiesIDs">
             @RenderPlaceholderCaruselText()
          </div>
     </div>
