--- a/Templates/Designs/TTonlineNew/Paragraph/New_CaruselCategoryHomepage.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_CaruselCategoryHomepage.cshtml
@@ -12,7 +12,7 @@
 @Include("../Includes/GetImage_new.cshtml")
 @{
         var pageId = GetPageIdByNavigationTag("SectionsFeed");
-        var urlFeed = "/Default.aspx?ID="+pageId;
+        var urlFeed = "/Default.aspx?ID="+pageId + "&redirect=false";
 }
 
 <div class="col-md-12 col-xs-12 recomandari">
