--- a/Templates/Designs/TTonlineNew/Paragraph/New_CaruselRedactoriHomepage.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_CaruselRedactoriHomepage.cshtml
@@ -19,7 +19,7 @@
 
 <div class="col-md-12 col-xs-12">
 	<h1 class="block-title"><span>@Translate("Redactori si Colaboratori")</span></h1>
-	<div class="owl-carousel owl-redactori owl-theme handlebars-wrapper" data-template="ColaboratoriRedactoriTemplate" data-json-feed="/Default.aspx?ID=@redactoriPageId">
+	<div class="owl-carousel owl-redactori owl-theme handlebars-wrapper" data-template="ColaboratoriRedactoriTemplate" data-json-feed="/Default.aspx?ID=@redactoriPageId&redirect=false">
 		@RenderPlaceholderCaruselImage()
 		@RenderPlaceholderCaruselImage()
 		@RenderPlaceholderCaruselImage()
