--- a/Templates/Designs/TTonlineNew/Custom/Sidebar/New_Widget-TabPanel.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/Sidebar/New_Widget-TabPanel.cshtml
@@ -12,13 +12,13 @@
         <li role="presentation"><a href="#tab-popular" aria-controls="tab-popular" role="tab" data-toggle="tab">@Translate("popular","Cele mai citite")</a></li>
     </ul>
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active sidebar-handlebars-wrapper" id="tab-recent" data-template="CeleMaiNoiTemplate"  data-json-feed="/Default.aspx?ID=@feedPageID&PageSize=5&type=Articole">
+        <div role="tabpanel" class="tab-pane active sidebar-handlebars-wrapper" id="tab-recent" data-template="CeleMaiNoiTemplate"  data-json-feed="/Default.aspx?ID=@feedPageID&PageSize=5&type=Articole&redirect=false">
             @*Handlebars Template goes here*@
             @RenderPlaceholderImageOnLeft()
             @RenderPlaceholderImageOnLeft()
             @RenderPlaceholderImageOnLeft()
         </div><!-- Recent Posts -->
-        <div role="tabpanel" class="tab-pane sidebar-handlebars-wrapper" id="tab-popular" data-template="CeleMaiCititeTemplate"  data-json-feed="/Default.aspx?ID=@feedCititePageID&PageSize=5&type=Articole&ArticleDate=@(agoString)&EndDate=@currentDateString">
+        <div role="tabpanel" class="tab-pane sidebar-handlebars-wrapper" id="tab-popular" data-template="CeleMaiCititeTemplate"  data-json-feed="/Default.aspx?ID=@feedCititePageID&PageSize=5&type=Articole&ArticleDate=@(agoString)&EndDate=@currentDateString&redirect=false">
             $1$Handlebars Template goes here#1#
         </div><!-- Recent Posts -->        
     </div>
