--- a/Templates/Designs/TTonlineNew/Includes/PageTemplates/MasterHelpers.cshtml
+++ b/Templates/Designs/TTonlineNew/Includes/PageTemplates/MasterHelpers.cshtml
@@ -78,8 +78,8 @@ if (string.IsNullOrEmpty(System.Web.HttpContext.Current.Request.Params["ProductI
      // var scriptBundleFooter = Dna.Optimizer.Renderer.RenderScripts(string.Format("{0}js/footer", designFolder), minify: minify, recursive : true, virtualPathPrefix : "-main-scripts-footer",exclusions:  new[] { "exceptions" });
     }
     @*<link rel="stylesheet" href="@styleBundle" />*@
-    <link rel="stylesheet" href="/Files/Templates/Designs/TTonlineNew/css/custom.css"/>
-    <script src="@scriptBundleHeader"></script>
+    <link rel="stylesheet" type="text/css" media="all" class="css-stylesheet" href="/Files/Templates/Designs/TTonlineNew/css/custom.min.css" async />
+    <script src="@scriptBundleHeader" async ></script>
     @GetString("Javascripts")
     @RenderSnippet("externalScripts")
     @SnippetStart("externalScripts") @SnippetEnd("externalScripts")
