--- a/Templates/Designs/TTonlineNew/Page.cshtml
+++ b/Templates/Designs/TTonlineNew/Page.cshtml
@@ -49,13 +49,13 @@
       <div class="row blog-content" data-stickyparent>      
         <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 ">
           <article class="post-wrapper clearfix">
-            <div class="first-container-article" data-template="ArticleBodyTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesID">
+            <div class="first-container-article" data-template="ArticleBodyTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesID&redirect=false">
               @RenderPlaceholderImageTop("pre-render-element--xl")
             </div>
           </article><!-- .post-wrapper -->
 
           @SnippetStart("Tags")
-           <div class="sidebar-handlebars-wrapper" data-template="TagsTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesID">
+           <div class="sidebar-handlebars-wrapper" data-template="TagsTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesID&redirect=false">
             </div>
           @SnippetEnd("Tags")
            <div class="row">
@@ -100,7 +100,7 @@
           
               <div class="col-md-6">
                 <h3 class="block-title"><span>@Translate("De acelasi autor","De acelasi autor")</span></h3>
-                <div class="row author-template" data-template="SectionTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageSize=3&SectiuneParinte=@articleSectiuneID&Excluded=@currentPageId">
+                <div class="row author-template" data-template="SectionTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageSize=3&SectiuneParinte=@articleSectiuneID&Excluded=@currentPageId&redirect=false">
                   <div style="margin-right: 5px">
                     @RenderPlaceholderImageTop("pre-render-element--md")
                     @RenderPlaceholderImageTop("pre-render-element--md")
@@ -110,7 +110,7 @@
               
               <div class="col-md-6">
                 <h3 class="block-title"><span>@Translate("Din aceeasi sectiune","Din aceeasi sectiune")</span></h3>
-                <div class="row section-template" data-template="SectionTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageSize=3&SectiuneParinte=@articleSectiuneID&Excluded=@currentPageId,">
+                <div class="row section-template" data-template="SectionTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageSize=3&redirect=false&SectiuneParinte=@articleSectiuneID&Excluded=@currentPageId,">
                   <div style="margin-left: 5px">
                     @RenderPlaceholderImageTop("pre-render-element--md")
                     @RenderPlaceholderImageTop("pre-render-element--md")
@@ -130,7 +130,7 @@
           <div class="comment_block">
             <div class="col-xs-12">
               <h4>Comentarii</h4>
-             <div class="comment_block handlebars-wrapper" data-template="CommentsTemplate" data-json-feed="/Default.aspx?ID=25352&PAGEID=@currentPage"> <!--currentPage-->
+             <div class="comment_block handlebars-wrapper" data-template="CommentsTemplate" data-json-feed="/Default.aspx?ID=25352&PAGEID=@currentPage&redirect=false"> <!--currentPage-->
               </div>
             </div>
             @if (Dynamicweb.Security.UserManagement.User.IsExtranetUserLoggedIn()){
@@ -261,7 +261,7 @@
                 <!-- Go to www.addthis.com/dashboard to customize your tools --> 
                 <div class="addthis_inline_share_toolbox"></div>              
               </div> 
-              <div class="author-section" data-template="AuthorsTemplate" data-json-feed="Default.aspx?ID=@autorPageID&Autor=">
+              <div class="author-section" data-template="AuthorsTemplate" data-json-feed="Default.aspx?ID=@autorPageID&redirect=false&Autor=">
               </div>                              
             </div>             
                            
