--- a/Templates/Designs/TTonlineNew/Paragraph/New_ListaStiriHomepage.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_ListaStiriHomepage.cshtml
@@ -26,7 +26,7 @@
         <h3 class="block-title"><span>@Translate("ultimelestiri", "ULTIMELE STIRI")</span></h3>
       
         @*if(GetBoolean("ItemPublisher:Items.Any")){*@
-        <ul class="widget-content" id="UltimeleStiri" data-template="UltimeleStiriTemplate" data-json-feed="/Default.aspx?ID=@pageId&type=Stiri">
+        <ul class="widget-content" id="UltimeleStiri" data-template="UltimeleStiriTemplate" data-json-feed="/Default.aspx?ID=@pageId&type=Stiri&redirect=false">
             @RenderPlaceholderNoImage()
             @RenderPlaceholderNoImage()
             @RenderPlaceholderNoImage()
