--- a/Templates/Designs/TTonlineNew/Includes/PageTemplates/MasterHelpers.cshtml
+++ b/Templates/Designs/TTonlineNew/Includes/PageTemplates/MasterHelpers.cshtml
@@ -78,7 +78,7 @@ if (string.IsNullOrEmpty(System.Web.HttpContext.Current.Request.Params["ProductI
      // var scriptBundleFooter = Dna.Optimizer.Renderer.RenderScripts(string.Format("{0}js/footer", designFolder), minify: minify, recursive : true, virtualPathPrefix : "-main-scripts-footer",exclusions:  new[] { "exceptions" });
     }
     @*<link rel="stylesheet" href="@styleBundle" />*@
-    <link rel="stylesheet" type="text/css" media="all" class="css-stylesheet" href="/Files/Templates/Designs/TTonlineNew/css/custom.min.css" async />
+    <link rel="stylesheet" type="text/css" media="all" class="css-stylesheet" href="/Files/Templates/Designs/TTonlineNew/css/custom.min.css?v=2" async />
     <script src="@scriptBundleHeader" async ></script>
     @GetString("Javascripts")
     @RenderSnippet("externalScripts")
