--- a/Templates/Designs/TTonlineNew/_parsed/HomepageCustom.parsed.cshtml
+++ b/Templates/Designs/TTonlineNew/_parsed/HomepageCustom.parsed.cshtml
@@ -97,7 +97,7 @@ if (string.IsNullOrEmpty(System.Web.HttpContext.Current.Request.Params["ProductI
      // var scriptBundleFooter = Dna.Optimizer.Renderer.RenderScripts(string.Format("{0}js/footer", designFolder), minify: minify, recursive : true, virtualPathPrefix : "-main-scripts-footer",exclusions:  new[] { "exceptions" });
     }
     @*<link rel="stylesheet" href="@styleBundle">*@
-    <link rel="stylesheet" href="/Files/Templates/Designs/TTonlineNew/css/10_custom/custom.min.css">
+    <link rel="stylesheet" href="/Files/Templates/Designs/TTonlineNew/css/10_custom/custom.css">
     <script src="@scriptBundleHeader"></script>
     @GetString("Javascripts")
     @RenderSnippet("externalScripts")
