--- a/Templates/Designs/TTonlineNew/css/custom.css
+++ b/Templates/Designs/TTonlineNew/css/custom.css
@@ -787,7 +787,7 @@
 
 .sort a:hover,
 .sort a.active {
-	background: #ffa600;
+	background: #ffa500;
 	color: #fff
 }
 
@@ -1167,7 +1167,7 @@ li.active a {
 }
 
 .header-first-container {
-	background-color: #212121
+	background-color: #222222
 }
 
 
@@ -2367,8 +2367,6 @@ div#motto {
 .small-block .news-title {
 	min-height: 56px
 }
-
-
 
 .news-title {
 	position: relative;
@@ -14919,7 +14917,7 @@ only screen and (min-device-pixel-ratio:1.5) {
 	z-index: 1042;
 	overflow: hidden;
 	position: fixed;
-	background: #0b0b0b;
+	background: #080808;
 	opacity: .8;
 	filter: alpha(opacity=80)
 }
@@ -17440,7 +17438,7 @@ ul.tabs li {
 	color: #fff;
 	overflow: hidden;
 	position: relative;
-	border-right: 2px solid #3f434b
+	border-right: 2px solid #3f444c
 }
 
 ul.tabs li:hover {
@@ -19406,7 +19404,7 @@ a.category:hover {
 	margin-right: 0;
 	margin-left: 0;
 	z-index: 10;
-	border-top: 1px solid #d3d3d3;
+	border-top: 1px solid #d5d5d5;
 	left: 0;
 	right: 0;
 	bottom: 0
@@ -20739,7 +20737,7 @@ a img.aligncenter {
 }
 
 .author-bio {
-	color: #5f5f5f;
+	color: #606060;
 	font-size: 14px;
 	line-height: 22px;
 	margin: 5px 0 10px;
@@ -21098,7 +21096,7 @@ a img.aligncenter {
 }
 
 .footer-main p {
-	color: #d7d7d7
+	color: #d5d5d5
 }
 
 .footer-main h3 {
@@ -21881,259 +21879,6 @@ body.dark-skin,
 	margin-top: -11px
 }
 
-
-.main-wrapper .mag-content {
-	padding-bottom: 0
-}
-
-
-
-.formtable .labelCell {
-	text-align: left
-}
-
-.formtable input[type="radio"] {
-	margin: 0 7px 5px 0;
-	display: inline-block;
-	vertical-align: middle
-}
-
-.formtable input[type="submit"] {
-	color: #fff;
-	border: none;
-	font-size: 14px;
-	line-height: 1;
-	padding: 10px 15px;
-	text-transform: uppercase;
-	background-color: #337ab7
-}
-
-.nohtmlshortdescription {
-	font-family: "Roboto", sans-serif;
-	font-size: 15px;
-	font-weight: 100!important;
-	color: #000
-}
-
-.excerpt b,
-.excerpt strong {
-	font-weight: 400;
-	color: #a9a9a9
-}
-
-.landing-menu,
-.landing-menu .M2,
-.landing-menu .M3,
-.landing-menu .M4 {
-	-webkit-padding-start: 0;
-	margin: 0;
-	padding: 0
-}
-
-.landing-menu {
-	border-bottom: 1px solid #e6e6e6;
-	margin-bottom: 30px
-}
-
-.landing-menu h3 {
-	font-size: 20px;
-	font-weight: 600;
-	line-height: 1.5;
-	color: #00406f;
-	padding: 10px 0;
-	margin: 0;
-	text-transform: uppercase
-}
-
-.landing-menu li,
-.landing-menu .M2 li,
-.landing-menu .M3 li,
-.landing-menu .M4 li {
-	list-style-type: none;
-	position: relative;
-	display: block
-}
-
-.landing-menu .M2 li a,
-.landing-menu .M3 li a,
-.landing-menu .M4 li a {
-	padding: 10px 0;
-	display: block;
-	border-top: 1px solid #e6e6e6;
-	color: #00406f;
-	font-size: 14px;
-	line-height: 1;
-	list-style-type: none
-}
-
-.landing-menu>li>a {
-	display: none
-}
-
-.landing-menu .M2 li:before,
-.landing-menu .M3 li:before {
-	color: #fff;
-	float: left;
-	font-size: 12px;
-	line-height: 1;
-	font-weight: 400;
-	background: #7a7a7a;
-	margin: 7px 10px 0 0;
-	content: '';
-	font-family: 'fontAwesome';
-	padding: 6px 6px 4px 6px
-}
-
-.landing-menu .M3,
-.landing-menu .M4 {
-	display: none
-}
-
-.landing-menu .M4 li:before {
-	color: #00406f;
-	float: left;
-	font-size: 12px;
-	line-height: 1;
-	font-weight: 400;
-	background: none;
-	margin: 7px 10px 0 0;
-	content: '';
-	font-family: 'fontAwesome';
-	padding: 6px 6px 4px 6px
-}
-
-.landing-menu .M2 li:after,
-.landing-menu .M3 li:after {
-	color: #222;
-	font-size: 18px;
-	line-height: 1;
-	font-weight: 600;
-	background: none;
-	top: -5px;
-	right: -10px;
-	position: absolute;
-	margin: 7px 10px 0 0;
-	content: '';
-	font-family: 'fontAwesome';
-	padding: 6px 6px 4px 6px
-}
-
-.landing-menu .M2 li.nochild:after,
-.landing-menu .M3 li.nochild:after {
-	content: ''
-}
-
-.landing-menu .M4 li:after {
-	content: ''
-}
-
-.landing-menu .M3 {
-	margin-left: 20px
-}
-
-.landing-menu .M4 {
-	margin-left: 20px
-}
-
-.skyscraper-left {
-	position: absolute;
-	top: 275px;
-	left: -180px;
-	z-index: -1
-}
-
-.skyscraper-right {
-	position: absolute;
-	top: 275px;
-	right: -180px;
-	z-index: -1
-}
-
-
-
-.product-item {
-	margin: 0 0 130px 0
-}
-
-.standard-item {
-	margin: 0 0 50px 0
-}
-
-.product-item .product-title {
-	min-height: 110px
-}
-
-.img-products .category {
-	background-color: #eee
-}
-
-.img-products img {
-	max-width: 60px
-}
-
-
-
-.product-title h2 {
-	font-size: 18px
-}
-
-#productdetails img {
-	margin-bottom: 20px;
-	display: block
-}
-
-.longdescription {
-	margin: 10px 0 0 0;
-	display: block
-}
-
-.fb_iframe_widget_fluid span {
-	max-width: 100%!important
-}
-
-.mega-menu li.homepage {
-	min-width: 3em
-}
-
-.mega-menu li.homepage>a:before {
-	font-family: "FontAwesome";
-	content: "";
-	margin-right: 1.5em
-}
-
-.mega-menu li.homepage>a:after {
-	display: none!important
-}
-
-.mega-menu li.homepage>a {
-	width: 1.7em;
-	overflow: hidden;
-	height: 2em
-}
-
-.btn-round {
-	background: #ffa700;
-	color: #fff;
-	border-radius: 50%;
-	width: 45px;
-	height: 45px;
-	padding: 9px 0
-}
-
-.btn-round .fa {
-	color: #fff
-}
-
-.mag-content ul {
-	padding-left: 0
-}
-
-
-#pagenavigation .prev,
-#pagenavigation .next {
-	display: block
-}
-
 .center {
 	text-align: center
 }
@@ -22202,7 +21947,7 @@ body.dark-skin,
 }
 
 .header-first-container {
-	background-color: #212121
+	background-color: #222222
 }
 
 @media only screen and (min-device-width:768px) and (max-device-width:1024px) {
@@ -22611,334 +22356,10 @@ a#editorialLink {
 	margin: 30px 0
 }
 
-#tabsContainer .tabs {
-	width: 100%
-}
-
-.fa-share-alt {
-	margin: 4px 5px 0 0
-}
-
-.addthis_inline_share_toolbox_islb {
-	margin-left: 10px!important
-}
-
-.btn-cere-detalii {
-	margin-top: 20px
-}
-
-.filtersContainer {
-	padding: 0 0 20px 0
-}
-
-.filtersContainer input[type=checkbox] {
-	margin: 2px 10px 0 10px;
-	clear: left;
-	float: left
-}
-
-.filtersContainer span {
-	float: left;
-	max-width: 85%
-}
-
-#filtersContainer label.checkBoxContainer {
-	clear: both;
-	display: block
-}
-
-.checkBoxContainer {
-	clear: both;
-	float: left;
-	width: 100%
-}
-
-.seeMore {
-	display: block;
-	clear: both;
-	width: 100%;
-	text-align: center;
-	margin: 10px 0 20px 0;
-	max-width: 100%!important
-}
-
-.removeAll {
-	display: block;
-	text-align: center;
-	background: #f5f5f5;
-	margin: 10px 0 15px 0
-}
-
-.removeAll:hover {
-	background: #e5e5e5
-}
-
-.listMode li {
-	display: inline-block;
-	list-style-type: none;
-	padding: 0;
-	margin: 0 10px 0 0
-}
-
-.listMode li i {
-	font-size: 2rem
-}
-
-.items {
-	padding: 30px 0 0 0
-}
-
-.headerBox select {
-	border: 1px solid #ddd;
-	padding: 5px 7px
-}
-
-.headerBox #orderProdList {
-	text-align: right
-}
-
-.footerBox .pagination {
-	margin-bottom: 0
-}
-
-.productsList li {
-	list-style-type: none;
-	padding: 0
-}
-
-.productsList h2 {
-	font-size: 1em;
-	margin: 10px 0;
-	min-height: 40px;
-	line-height: 1.3
-}
-
-.productsList figure {
-	height: 180px;
-	overflow: hidden
-}
-
-.productsList figure img {
-	width: 100%
-}
-
-.addToCompare {
-	padding: 0 0 20px 15px
-}
-
-.addToCompare label {
-	margin-top: 10px
-}
-
-.addToCompare input {
-	margin: 0 5px 0 0;
-	vertical-align: middle
-}
-
-.tab_content ul li {
-	line-height: 1.5
-}
-
-.username {
-	padding-top: 20px
-}
-
-.username span {
-	color: #ffa700
-}
-
-
-h1.block-title,
-h3.block-title {
-	height: auto!important;
-	line-height: 1!important;
-	padding-bottom: 0!important;
-	display: block;
-	position: relative;
-	float: left;
-	width: 100%;
-	min-height: 37px;
-	clear: both
-}
-
-h1.block-title span,
-h3.block-title span {
-	border-bottom: 2px solid #ffa700!important;
-	display: inline-block!important;
-	line-height: 35px!important;
-	min-height: 35px;
-	height: auto!important;
-	position: relative!important;
-	margin-bottom: -10px!important
-}
-
-.hide-header-when-scroll {
-	top: -128px!important;
-	transition: .5s ease-in all
-}
-
-
-div#motto {
-	color: #fbaf29;
-	padding-left: 0
-}
 
 .btn-primary:hover {
 	background-position: 0 -40px
 }
-
-.multiselect-native-select {
-	clear: both;
-	display: block;
-	width: 100%
-}
-
-.multiselect-native-select .btn-group {
-	width: 100%
-}
-
-.btn.multiselect {
-	color: #555;
-	width: 100%;
-	background: none;
-	text-align: left;
-	text-shadow: 0 0 0 white;
-	border: 1px solid #d0d0d0
-}
-
-.multiselect-selected-text {
-	max-width: 90%;
-	overflow: hidden;
-	display: block
-}
-
-.btn.multiselect .caret {
-	position: absolute;
-	margin-top: 8px;
-	right: 15px;
-	top: 10px
-}
-
-
-#account-creation .btn-action {
-	color: #fff
-}
-
-.author .block-title header {
-	position: relative
-}
-
-.author a.view-company {
-	color: #fff;
-	padding: 10px 20px;
-	line-height: 1;
-	position: absolute;
-	top: 0;
-	right: 0
-}
-
-.mag-content .col-companie .news-block.small-block {
-	position: relative;
-	padding-bottom: 122px
-}
-
-#loading {
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 900000;
-	width: 100vw;
-	height: 100vh;
-	background-color: rgba(255, 255, 255, .8);
-	background-image: url('/Files/Templates/Designs/TTonline/images/loader.gif');
-	background-repeat: no-repeat;
-	background-position: center
-}
-
-
-.news-details-2 {
-	position: relative;
-	top: 40px;
-	margin-left: 30px;
-	margin-right: 30px
-}
-
-.articole-calendar .news-details {
-	bottom: -15px!important
-}
-
-.small-block img {
-	margin-top: 0
-}
-
-.small-block .news-title {
-	min-height: 56px
-}
-
-.news-title {
-	position: relative;
-	max-height: 42px
-}
-
-.news-title-ellipsis {
-	text-overflow: ellipsis
-}
-
-.lista-editii {
-	height: auto
-}
-
-.lista-editii figure {
-	height: 200px
-}
-
-.col-lista-editii {
-	margin-bottom: 15px
-}
-
-.lista-editii .featured-header {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: relative;
-	padding: 0;
-	background: #fff
-}
-
-.lista-editii h4 {
-	margin: 0;
-	font-size: 1.1em;
-	line-height: 1.3em;
-	height: 2.6em;
-	padding: 0 10px;
-	margin-top: 5px
-}
-
-.lista-editii a {
-	color: #000
-}
-
-.carousel-companii .owl-carousel .owl-item img {
-	width: 100%!important
-}
-
-.owl-carousel .owl-drag .owl-item a {
-	min-height: 0
-}
-
-.big-block .image-overlay {
-	height: 480px
-}
-
-.featured-big .image-overlay {
-	height: 480px
-}
-
-.featured-big .image-overlay img {
-	height: auto
-}
-
 
 .month {
 	font-weight: bold;
@@ -22946,157 +22367,10 @@ div#motto {
 	color: #000
 }
 
-.weekdays {
-	margin: 0;
-	background-color: #ffa700;
-	font-size: 10px;
-	font-weight: bold
-}
-
-.weekdays li {
-	list-style-type: none;
-	display: inline-block;
-	width: 12%;
-	color: #fff;
-	text-align: center
-}
-
-.days {
-	margin: 0;
-	background: #fff;
-	font-size: 10px;
-	font-weight: bold;
-	height: 90px
-}
-
-.days li {
-	list-style-type: none;
-	display: inline-block;
-	width: 12%;
-	color: #000;
-	text-align: center;
-	margin-top: 1px
-}
-
-.month:hover,
-.weekdays:hover,
-.days:hover {
-	cursor: pointer
-}
-
-.modal-content .modal-body {
-	height: 550px;
-	overflow: scroll
-}
-
-.modal-body .month {
-	margin-bottom: 10px
-}
-
-.modal-body .weekdays {
-	padding: 2px
-}
-
-.modal-body .weekdays li {
-	font-size: 14px;
-	width: 13.8%
-}
-
-.modal-body .days {
-	height: 370px
-}
-
-.modal-body .days li {
-	height: 7em;
-	width: 12%;
-	background-color: #efefef;
-	border: 1.5px solid #fff;
-	vertical-align: middle;
-	overflow: hidden
-}
-
-.modal-body .days li span {
-	font-size: 14px;
-	margin-left: 40px;
-	color: #000
-}
-
-.modal-body .days li a {
-	color: #000;
-	padding: 3px;
-	margin: 0!important;
-	font-size: 12px
-}
-
-.modal-body .days li a:hover {
-	color: #fff
-}
-
-.modal-body .month:hover,
-.modal-body .weekdays:hover {
-	cursor: default
-}
-
 .side-calendar {
 	margin-bottom: 20px
 }
 
-.side-calendar .days:hover {
-	background-color: #efefef
-}
-
-.side-month {
-	display: none
-}
-
-.side-month .modal-body .weekdays li {
-	font-size: 11px;
-	width: 13.6%
-}
-
-.side-month .modal-body .days {
-	height: 300px
-}
-
-.side-month .modal-body .days li {
-	height: 5em;
-	width: 13.5%
-}
-
-.side-month .modal-body .days li span {
-	font-size: 11px;
-	margin-left: 32px
-}
-
-.side-month .modal-body .days li a {
-	font-size: 10px
-}
-
-.eveniment div {
-	padding: 10px
-}
-
-.titlu {
-	font-size: 20px
-}
-
-.adaugare {
-	font-style: italic;
-	font-size: 12px
-}
-
-.locatie-oras-perioada {
-	font-size: 12px
-}
-
-.locatie-oras-perioada li {
-	list-style-type: none
-}
-
-.adaugare span,
-.locatie-oras-perioada span {
-	color: #ffa700
-}
 
 .articole-calendar {
 	margin-bottom: 80px
@@ -23114,209 +22388,6 @@ div#motto {
 	text-decoration: underline
 }
 
-.product-search,
-.company-search {
-	margin-bottom: 15px;
-	text-align: center
-}
-
-.product-search input {
-	border: 1px solid;
-	padding: 5px;
-	width: 70%;
-	max-width: 250px
-}
-
-.product-search button {
-	border: none;
-	background-color: #fff;
-	color: #bbb
-}
-
-.result-query {
-	padding-top: 40px
-}
-
-
-.separator-articole {
-	border-bottom: 1px solid #eee
-}
-
-
-#dw-form-3 .descriptionRow {
-	float: left
-}
-
-#dw-form-4 .descriptionRow {
-	float: left
-}
-
-.companie {
-	margin-bottom: 190px
-}
-
-.companie .news-details {
-	bottom: -190px
-}
-
-.companie .news-title {
-	min-height: 56px
-}
-
-.companie-summary {
-	height: 60px;
-	overflow: hidden
-}
-
-.product-manufacturer {
-	position: relative;
-	bottom: 50px;
-	left: 200px
-}
-
-#myCarousel .item {
-	padding: 10px 0
-}
-
-#myCarousel .item img {
-	width: 100%;
-	height: auto
-}
-
-#myCarousel .item-titlu {
-	font-size: 18px
-}
-
-
-#myCarousel .item a:last-child {
-	float: right;
-	color: #ffa700;
-	position: relative;
-	margin-top: 25px;
-	margin-right: 50px;
-	background-color: #fff;
-	padding: 7px 10px 5px
-}
-
-#myCarousel .item a:hover {
-	text-decoration: underline
-}
-
-.sticky {
-	position: -webkit-sticky;
-	position: sticky;
-	top: 0
-}
-
-#foto a,
-#video a:last-child,
-#prezentari a {
-	float: right;
-	margin-top: 10px;
-	width: 100%
-}
-
-#foto img,
-#video img,
-#prezentari img {
-	max-height: 240px
-}
-
-
-.link-autor:hover {
-	border-bottom: 1px solid #999!important;
-	border-color: #999!important
-}
-
-.recomandari header div {
-	height: 6em;
-	overflow: hidden;
-	margin-bottom: 1em
-}
-
-.simple-post-2 .simple-thumb {
-	width: 255px
-}
-
-.multimediawidget .nav-tabs {
-	margin-bottom: 0
-}
-
-.load-more a {
-	color: #7a7a7a
-}
-
-.load-more a:hover {
-	color: #fff
-}
-
-.main-summary {
-	height: 41px;
-	overflow: hidden;
-	margin-bottom: 10px
-}
-
-.yellow-btn {
-	padding: 10px 15px!important;
-	border-radius: 0!important;
-	border: none!important;
-	transition: all .15s ease-in-out!important;
-	-moz-transition: all .15s ease-in-out!important;
-	background-color: #fed100!important;
-	border-color: rgba(46, 109, 164, 0)!important;
-	width: 131.78px;
-	height: 40px;
-	text-transform: none!important
-}
-
-.yellow-btn:hover {
-	color: #fff!important;
-	background-color: #d3063a!important;
-	border-color: #d3063a!important
-}
-
-div.sticky.default {
-	top: 325px;
-	bottom: 270px;
-	transition: all .15s ease-in-out!important;
-	-moz-transition: all .15s ease-in-out!important
-}
-
-div.sticky.top {
-	top: 150px
-}
-
-div.sticky.top.cookies-top {
-	top: 300px
-}
-
-div.sticky.bottom {
-	bottom: 270px
-}
-
-.skyscraper--left {
-	position: absolute;
-	left: -180px;
-	top: 0;
-	bottom: 0
-}
-
-.skyscraper--right {
-	position: absolute;
-	right: -180px;
-	top: 0;
-	bottom: 0
-}
-
-.img-align {
-	height: 300px
-}
-
-.button-color {
-	background-color: #ffa500;
-	color: #000;
-	border: none
-}
 .shop-background {
 	background: url(/Files/Images/IBScrop.jpg);
 	background-color: #3f444c;
@@ -23415,108 +22486,6 @@ div.sticky.bottom {
 	margin: 0 .5em 0 0
 }
 
-#compare_results .results {
-	background-color: #fff;
-	border: 1px solid #000;
-	padding: .5em;
-	box-shadow: 0 0 7px #c1c1c1
-}
-
-#compare_results {
-	overflow: visible
-}
-
-#compare_results .compare-item {
-	border-bottom: 1px solid #eee;
-	padding: .2em 0;
-	cursor: pointer
-}
-
-#compare_results .compare-item:last-child {
-	border: none
-}
-
-#compare_results .compare-item .media-object {
-	height: 45px;
-	width: 45px
-}
-
-#compare_results .compare-item .media-body {
-	vertical-align: middle
-}
-
-#compare-render-content .delete-item {
-	position: absolute;
-	right: 0;
-	top: 0;
-	background: transparent;
-	color: red;
-	border: none
-}
-
-#compare-render-content .item {
-	position: relative;
-	border-bottom: 2px solid #eaeaea;
-	padding-bottom: .5em;
-	margin: .5em
-}
-
-#compare-render-content .item img {
-	margin: 0 auto;
-	width: auto!important
-}
-
-#compare-render-content .item:last-child {
-	border: none
-}
-
-.wrapper-compare-box {
-	border: 1px solid #000;
-	padding: 5px
-}
-
-#compare-block {
-	background-color: #fff;
-	position: fixed;
-	top: 2rem;
-	right: 2rem;
-	width: 100px;
-	z-index: 9999;
-	opacity: 0;
-	transition: all .3s ease-out
-}
-
-#compare-block.open {
-	opacity: 1
-}
-
-.btn-compara {
-	text-align: center;
-	display: block
-}
-
-*,
-*:before,
-*:after {
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	transition: all .2s ease
-}
-
-.user_avatar {
-	width: 65px;
-	height: 65px;
-	display: inline-block;
-	vertical-align: middle
-}
-
-.user_avatar img {
-	width: 100%;
-	height: 100%;
-	border-radius: 50%
-}
-
 .comment_block {
 	width: 100%;
 	height: 100%;
@@ -23531,49 +22500,6 @@ div.sticky.bottom {
 	padding-right: 20px!important;
 	padding-bottom: 40px!important
 }
-
-.comment_block .create_new_comment .input_comment {
-	display: inline-block;
-	vertical-align: middle;
-	margin-left: 10px;
-	width: 100%
-}
-
-.comment_block .create_new_comment .input_comment input[type="text"] {
-	width: 100%;
-	font-family: 'Lato', sans-serif;
-	font-weight: 300;
-	font-size: 1.3rem;
-	padding: 10px;
-	border: none;
-	border-bottom: 2px solid #f2f2f2
-}
-
-.comment_block .create_new_comment .input_comment input[type="email"] {
-	width: 100%;
-	font-family: 'Lato', sans-serif;
-	font-weight: 300;
-	font-size: 1.3rem;
-	padding: 10px;
-	border: none;
-	border-bottom: 2px solid #f2f2f2
-}
-
-.comment_block .create_new_comment .input_comment textarea {
-	width: 100%;
-	font-family: 'Lato', sans-serif;
-	font-weight: 300;
-	font-size: 1.3rem;
-	padding: 10px;
-	border: none;
-	border-bottom: 2px solid #f2f2f2
-}
-
-.comment_block .create_new_comment .input_comment input[type="text"]:focus {
-	outline: none;
-	border-bottom: 2px solid #e6e6e6
-}
-
 .comment_block .new_comment {
 	width: 100%;
 	height: auto;
@@ -23628,7 +22554,7 @@ div.sticky.bottom {
 	display: inline-block;
 	padding: 5px;
 	font-size: 14px;
-	color: #d9d9d9
+	color: #d5d5d5
 }
 
 .comment_block .new_comment .comment_toolbar ul li:hover {
