--- a/Templates/Designs/TTonlineNew/Master.cshtml
+++ b/Templates/Designs/TTonlineNew/Master.cshtml
@@ -229,7 +229,7 @@ var scriptBundleFooter = Dna.Optimizer.Renderer.RenderScripts(string.Format("{0}
     <!-- / Mobile Menu -->
     <div id="go-top-button" class="fa fa-angle-up" title="Scroll To Top"></div>
     <div class="mobile-overlay" id="mobile-overlay"></div>
- <script type="text/javascript" src="@scriptBundleFooter"></script>
+@* <script type="text/javascript" src="@scriptBundleFooter"></script>*@
 
 
 
@@ -297,7 +297,7 @@ var google_remarketing_only = true;
 
 <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"></script> 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/js/bootstrap-multiselect.min.js"></script>
- <script type="text/javascript" src="/Files/Templates/Designs/TTOnlineNew/dist/bundle.min.js"></script>
+ <script type="text/javascript" src="/Files/Templates/Designs/TTOnlineNew/dist/bundle.min.js?v=2"></script>
 @*
 <script type="text/javascript" src="/Files/Templates/Designs/TTOnlineNew/js/minified/00_libraries/00_handlebars.js"></script> 
 <script type="text/javascript" src="/Files/Templates/Designs/TTOnlineNew/js/minified/00_libraries/05_axios.js"></script> 
