--- a/Templates/Designs/TTonlineNew/Json/QueryPublisher/FeedAutori.cshtml
+++ b/Templates/Designs/TTonlineNew/Json/QueryPublisher/FeedAutori.cshtml
@@ -18,6 +18,7 @@
         public string imagine { get; set; }
         public string paginaDeCompanieAsociata { get; set; }
         public string persoana_companie { get; set; }
+        public string hiddenClass { get; set; }
     }
    
     public class Root {
@@ -58,6 +59,8 @@
         Autori.paginaDeCompanieAsociata = paginaDeCompanieAsociata;
         Autori.name = name;
         Autori.persoana_companie = persoana_companie;
+        Autori.hiddenClass = Autori.imagine == "" ? "hidden" : "";
+
         counterAutori++;
         feedRoot.Autori.Add(Autori);
 
