--- a/Templates/Designs/TTonlineNew/New_ContentAutor.cshtml
+++ b/Templates/Designs/TTonlineNew/New_ContentAutor.cshtml
@@ -151,9 +151,9 @@ ga('send', 'pageview');
             <a class="btn btn-primary view-company" href="/companie?companyID={{paginaDeCompanieAsociata}}">@Translate("Vezi Compania", "Vezi Compania")</a>
          {{/ifCond}}
          {{#ifCond persoana_companie "===" "Persoana"}}
-             <div class="author-box clearfix ">
+             <div class="author-box clearfix {{hiddenClass}}">
                 <div class="author-avatar">
-                    <img alt="" src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=100&Height=150&bgcolor=white" >
+                    <img alt="" src="/Admin/Public/GetImage.ashx?Image={{imagine}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=100&Height=150&bgcolor=white" >
                 </div>
                 <div class="author-info">
                   <h3><a href="">{{name}}</a></h3>
