remove google key

--- a/Templates/Designs/TTonline/Master_gol.cshtml
+++ b/Templates/Designs/TTonline/Master_gol.cshtml
@@ -277,7 +277,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <!-- Google map api -->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC3qzD9htQdRmf9Utip_B4jozI61S1Kub0"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=@GetString("Item.Area.GoogleKey")"></script>
 
 <!-- Plugins js -->
 <script src="@areaLayoutPath/assets/js/plugins.js"></script>
