--- a/Templates/Designs/TTonline/_parsed/PaginaCompanie.parsed.cshtml
+++ b/Templates/Designs/TTonline/_parsed/PaginaCompanie.parsed.cshtml
@@ -2755,7 +2755,7 @@ ga('send', 'pageview');
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5941501b1be8de2c"></script> 
 
 <!-- Google map api -->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC3qzD9htQdRmf9Utip_B4jozI61S1Kub0"></script> 
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=@GetString("Item.Area.GoogleKey")"></script> 
 
 
           </div><!-- .main-content -->
